Mon Jan 17 22:21:07 2011  Scott Deifik         <scottd.mail@sbcglobal.net>

	* Makefile.tst: Sync with mainline version.

Mon Jan 17 22:17:07 2011  Arnold Robbins  <arnold@skeeve.com>

	* config.h: Remove definitions of PIPES_SIMULATED and _NFILE for
	DJGPP. Per Eli, they aren't needed here.

2011-01-08  Eli Zaretskii  <eliz@gnu.org>

	* popen.c (scriptify): Fix syntax error.

	* config.h (HAVE___ARGZ_COUNT, HAVE___ARGZ_NEXT)
	(HAVE___ARGZ_STRINGIFY): Don't define.
	(HAVE_PORTALS): Remove reference.

	* gawkmisc.pc (unsetenv) [__DJGPP__]: Implement.
	(usleep) [__MINGW32__]: Resurrect.

Tue Jan  4 11:20:40 2011  Arnold Robbins  <arnold@skeeve.com>

	* config.h: Add PIPES_SIMULATED and definition of _NFILE for
	DJGPP.

Sat Dec 18 22:12:42 2010  Arnold Robbins  <arnold@skeeve.com>

	* gawkw32.def: Removed.
	* Makefile (gawk.exp): Removed target and rule.

Sat Dec 18 20:13:35 2010  Eli Zaretskii  <eliz@gnu.org>

	* popen.h: Remove the parts conditioned by _MSC_VER and OS2.  Use
	__DJGPP__ instead of __GO32__.

	* popen.c (popen, pclose) [OS2, _MSC_VER]: Remove definitions.
	(unixshell, scriptify, os_pclose): Remove OS2 parts.

	* getid.c: Remove the parts conditioned by _MSC_VER and OS2.

	* config.h: Remove the parts conditioned by _MSC_VER.

	* Makefile: Drop support for DJGPP v1.x and for Microsoft
	compilers on DOS/Windows.

	* gawkmisc.pc (setenv, unsetenv) [__MINGW32__]: Emulations for MinGW.

	* Makefile (DLMINGW32): New variable.
	(mingw32): Pass it to sub-Make.

	* dlfnc.h, dlfcn.c, include/*: Removed.

Mon Nov 29 20:10:00 2010  Eli Zaretskii  <eliz@gnu.org>

	* config.h (HAVE_STRFTIME): Don't define for __MINGW32__.  Define
	strftime to rpl_strftime, to avoid infinite recursion in
	missing_d/strftime.c.

Fri Nov 12 12:36:18 2010  Scott Deifik         <scottd.mail@sbcglobal.net>

	* Makefile.tst: Sync with mainline version.

Thu Oct 28 08:17:00 2010  Scott Deifik         <scottd.mail@sbcglobal.net>

	* Makefile.tst: Sync with mainline version.
