@@ -1,3 +1,7 @@
+Thu Jan 27 21:31:23 2011  Scott Deifik         <scottd.mail@sbcglobal.net>
+
+	* Makefile.tst: Fixes for dumpvars and mv, cp, et. al.
+
 Mon Jan 17 22:21:07 2011  Scott Deifik         <scottd.mail@sbcglobal.net>
 
 	* Makefile.tst: Sync with mainline version.
